duplicates, null values, deal with null value

--- a/Hotel_Booking_Analysis_Capstone_Project.ipynb
+++ b/Hotel_Booking_Analysis_Capstone_Project.ipynb
@@ -36,7 +36,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "442e472b-c339-4ac3-a47e-b7fd618f28bf"
+        "outputId": "2fe79d74-b386-4d9d-d1cf-cf11d274dd7d"
       },
       "execution_count": 2,
       "outputs": [
@@ -68,7 +68,7 @@
       ],
       "metadata": {
         "id": "8vXo6BsS7hUH",
-        "outputId": "adf3b175-3c97-4f50-fbb0-a2a4fbdd1c80",
+        "outputId": "27b5bcb8-acf2-465b-9495-1006814cf07c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 386
@@ -126,7 +126,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d615420c-d4ea-434d-a6b8-dc91467e4728\">\n",
+              "  <div id=\"df-bae8f0d6-f25b-47f1-a318-9f435acfa3bc\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -294,7 +294,7 @@
               "</table>\n",
               "<p>5 rows × 32 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d615420c-d4ea-434d-a6b8-dc91467e4728')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bae8f0d6-f25b-47f1-a318-9f435acfa3bc')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -345,12 +345,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-d615420c-d4ea-434d-a6b8-dc91467e4728 button.colab-df-convert');\n",
+              "          document.querySelector('#df-bae8f0d6-f25b-47f1-a318-9f435acfa3bc button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-d615420c-d4ea-434d-a6b8-dc91467e4728');\n",
+              "          const element = document.querySelector('#df-bae8f0d6-f25b-47f1-a318-9f435acfa3bc');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -384,7 +384,7 @@
       ],
       "metadata": {
         "id": "ZGRJs3qwnrH_",
-        "outputId": "95730f80-7eae-4b3d-fbd6-3e9d01c1d95d",
+        "outputId": "144513ca-fc41-4dfc-df66-06a9c8088baf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 386
@@ -449,7 +449,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-90e363ae-9bd4-4210-b8d2-243921f40e95\">\n",
+              "  <div id=\"df-f3c7f65e-a47c-40b8-a039-93fc3cb4d57c\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -617,7 +617,7 @@
               "</table>\n",
               "<p>5 rows × 32 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-90e363ae-9bd4-4210-b8d2-243921f40e95')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f3c7f65e-a47c-40b8-a039-93fc3cb4d57c')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -668,12 +668,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-90e363ae-9bd4-4210-b8d2-243921f40e95 button.colab-df-convert');\n",
+              "          document.querySelector('#df-f3c7f65e-a47c-40b8-a039-93fc3cb4d57c button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-90e363ae-9bd4-4210-b8d2-243921f40e95');\n",
+              "          const element = document.querySelector('#df-f3c7f65e-a47c-40b8-a039-93fc3cb4d57c');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -707,7 +707,7 @@
       ],
       "metadata": {
         "id": "d2Ti42na-cE8",
-        "outputId": "a899a253-fab7-44e0-d4c3-85d758ef52ed",
+        "outputId": "008f4f9d-67cf-4b10-cca0-d1a0402ba0bf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -733,7 +733,7 @@
       ],
       "metadata": {
         "id": "owEaf98O-pMC",
-        "outputId": "44dfaff5-66fd-4821-faf5-6fe1e122c12f",
+        "outputId": "e99f53ff-4c1c-4c36-9013-75b2d03b5048",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 364
@@ -817,7 +817,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e849e544-0097-4b7b-995b-e44f4d02e0db\">\n",
+              "  <div id=\"df-b3aebf60-a985-4a92-8a77-5e8fc3d17300\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1047,7 +1047,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e849e544-0097-4b7b-995b-e44f4d02e0db')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b3aebf60-a985-4a92-8a77-5e8fc3d17300')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1098,12 +1098,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-e849e544-0097-4b7b-995b-e44f4d02e0db button.colab-df-convert');\n",
+              "          document.querySelector('#df-b3aebf60-a985-4a92-8a77-5e8fc3d17300 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-e849e544-0097-4b7b-995b-e44f4d02e0db');\n",
+              "          const element = document.querySelector('#df-b3aebf60-a985-4a92-8a77-5e8fc3d17300');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1137,7 +1137,7 @@
       ],
       "metadata": {
         "id": "SLkcCEpEJ30v",
-        "outputId": "1ee99c43-bbe3-4aee-bba8-e04f0ca1c260",
+        "outputId": "4e3df868-ae5b-49d8-a2b4-cfd5d13ffb2f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1174,12 +1174,12 @@
       ],
       "metadata": {
         "id": "21jKDkUHJ8BL",
-        "outputId": "5f7823b8-66e8-4bff-e993-17ae50364dd2",
+        "outputId": "70608aec-b490-4252-db78-e049020a733d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -1300,6 +1300,263 @@
       "metadata": {
         "id": "i4vsgD_hKM-L"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['hotel'].unique()"
+      ],
+      "metadata": {
+        "id": "3yXPwbQqJI0v",
+        "outputId": "b089a105-d35b-4cff-8c19-f1c2a4d70bf7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['Resort Hotel', 'City Hotel'], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['meal'].unique()"
+      ],
+      "metadata": {
+        "id": "im76MbuyJOXn",
+        "outputId": "3c6d8fde-c7b2-4083-c240-ee4f164de177",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['BB', 'FB', 'HB', 'SC', 'Undefined'], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['country'].unique()"
+      ],
+      "metadata": {
+        "id": "m6fEcbZ4JRWx",
+        "outputId": "5aa44ac8-6ef5-4f53-c15c-1c1fa8edf46e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['PRT', 'GBR', 'USA', 'ESP', 'IRL', 'FRA', nan, 'ROU', 'NOR', 'OMN',\n",
+              "       'ARG', 'POL', 'DEU', 'BEL', 'CHE', 'CN', 'GRC', 'ITA', 'NLD',\n",
+              "       'DNK', 'RUS', 'SWE', 'AUS', 'EST', 'CZE', 'BRA', 'FIN', 'MOZ',\n",
+              "       'BWA', 'LUX', 'SVN', 'ALB', 'IND', 'CHN', 'MEX', 'MAR', 'UKR',\n",
+              "       'SMR', 'LVA', 'PRI', 'SRB', 'CHL', 'AUT', 'BLR', 'LTU', 'TUR',\n",
+              "       'ZAF', 'AGO', 'ISR', 'CYM', 'ZMB', 'CPV', 'ZWE', 'DZA', 'KOR',\n",
+              "       'CRI', 'HUN', 'ARE', 'TUN', 'JAM', 'HRV', 'HKG', 'IRN', 'GEO',\n",
+              "       'AND', 'GIB', 'URY', 'JEY', 'CAF', 'CYP', 'COL', 'GGY', 'KWT',\n",
+              "       'NGA', 'MDV', 'VEN', 'SVK', 'FJI', 'KAZ', 'PAK', 'IDN', 'LBN',\n",
+              "       'PHL', 'SEN', 'SYC', 'AZE', 'BHR', 'NZL', 'THA', 'DOM', 'MKD',\n",
+              "       'MYS', 'ARM', 'JPN', 'LKA', 'CUB', 'CMR', 'BIH', 'MUS', 'COM',\n",
+              "       'SUR', 'UGA', 'BGR', 'CIV', 'JOR', 'SYR', 'SGP', 'BDI', 'SAU',\n",
+              "       'VNM', 'PLW', 'QAT', 'EGY', 'PER', 'MLT', 'MWI', 'ECU', 'MDG',\n",
+              "       'ISL', 'UZB', 'NPL', 'BHS', 'MAC', 'TGO', 'TWN', 'DJI', 'STP',\n",
+              "       'KNA', 'ETH', 'IRQ', 'HND', 'RWA', 'KHM', 'MCO', 'BGD', 'IMN',\n",
+              "       'TJK', 'NIC', 'BEN', 'VGB', 'TZA', 'GAB', 'GHA', 'TMP', 'GLP',\n",
+              "       'KEN', 'LIE', 'GNB', 'MNE', 'UMI', 'MYT', 'FRO', 'MMR', 'PAN',\n",
+              "       'BFA', 'LBY', 'MLI', 'NAM', 'BOL', 'PRY', 'BRB', 'ABW', 'AIA',\n",
+              "       'SLV', 'DMA', 'PYF', 'GUY', 'LCA', 'ATA', 'GTM', 'ASM', 'MRT',\n",
+              "       'NCL', 'KIR', 'SDN', 'ATF', 'SLE', 'LAO'], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['reserved_room_type'].unique()"
+      ],
+      "metadata": {
+        "id": "GCp2EECBJVHT",
+        "outputId": "b4a16d55-f5c7-4bb8-aa46-420d6e4ebfee",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['C', 'A', 'D', 'E', 'G', 'F', 'H', 'L', 'P', 'B'], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_df=df.copy()"
+      ],
+      "metadata": {
+        "id": "o09WrqXjJYrt"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_df.duplicated().value_counts()"
+      ],
+      "metadata": {
+        "id": "GshzpX5sJcJM",
+        "outputId": "d1c7184d-5637-422e-f325-5adacd8e5316",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False    87396\n",
+              "True     31994\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_df.drop_duplicates(inplace=True)"
+      ],
+      "metadata": {
+        "id": "TNJBGAiXJfv6"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_df.shape"
+      ],
+      "metadata": {
+        "id": "X4gTOPKYJjbR",
+        "outputId": "25c6b319-3075-4899-939d-a4181e1e7646",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(87396, 32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_df.isna().sum().sort_values(ascending=False)"
+      ],
+      "metadata": {
+        "id": "D-tkY5KdJrsp",
+        "outputId": "138f574f-d635-45da-f3b7-2bd0a90d138c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "company                           82137\n",
+              "agent                             12193\n",
+              "country                             452\n",
+              "children                              4\n",
+              "reserved_room_type                    0\n",
+              "assigned_room_type                    0\n",
+              "booking_changes                       0\n",
+              "deposit_type                          0\n",
+              "hotel                                 0\n",
+              "previous_cancellations                0\n",
+              "days_in_waiting_list                  0\n",
+              "customer_type                         0\n",
+              "adr                                   0\n",
+              "required_car_parking_spaces           0\n",
+              "total_of_special_requests             0\n",
+              "reservation_status                    0\n",
+              "previous_bookings_not_canceled        0\n",
+              "is_repeated_guest                     0\n",
+              "is_canceled                           0\n",
+              "distribution_channel                  0\n",
+              "market_segment                        0\n",
+              "meal                                  0\n",
+              "babies                                0\n",
+              "adults                                0\n",
+              "stays_in_week_nights                  0\n",
+              "stays_in_weekend_nights               0\n",
+              "arrival_date_day_of_month             0\n",
+              "arrival_date_week_number              0\n",
+              "arrival_date_month                    0\n",
+              "arrival_date_year                     0\n",
+              "lead_time                             0\n",
+              "reservation_status_date               0\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
     }
   ],
   "metadata": {
