--- a/Hotel_Booking_Analysis_Capstone_Project.ipynb
+++ b/Hotel_Booking_Analysis_Capstone_Project.ipynb
@@ -36,7 +36,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2fe79d74-b386-4d9d-d1cf-cf11d274dd7d"
+        "outputId": "a3110efa-590f-48ec-c282-2c8fbac0e41d"
       },
       "execution_count": 2,
       "outputs": [
@@ -68,7 +68,7 @@
       ],
       "metadata": {
         "id": "8vXo6BsS7hUH",
-        "outputId": "27b5bcb8-acf2-465b-9495-1006814cf07c",
+        "outputId": "251e0c3a-159f-4cce-ef59-dd14422996c6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 386
@@ -126,7 +126,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-bae8f0d6-f25b-47f1-a318-9f435acfa3bc\">\n",
+              "  <div id=\"df-a1b09c35-0a8d-4b48-8a2f-df2cff03517b\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -294,7 +294,7 @@
               "</table>\n",
               "<p>5 rows × 32 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bae8f0d6-f25b-47f1-a318-9f435acfa3bc')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a1b09c35-0a8d-4b48-8a2f-df2cff03517b')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -345,12 +345,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-bae8f0d6-f25b-47f1-a318-9f435acfa3bc button.colab-df-convert');\n",
+              "          document.querySelector('#df-a1b09c35-0a8d-4b48-8a2f-df2cff03517b button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-bae8f0d6-f25b-47f1-a318-9f435acfa3bc');\n",
+              "          const element = document.querySelector('#df-a1b09c35-0a8d-4b48-8a2f-df2cff03517b');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -384,7 +384,7 @@
       ],
       "metadata": {
         "id": "ZGRJs3qwnrH_",
-        "outputId": "144513ca-fc41-4dfc-df66-06a9c8088baf",
+        "outputId": "b0d3ecdd-1825-42fa-afc8-cee5991fdd8d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 386
@@ -449,7 +449,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f3c7f65e-a47c-40b8-a039-93fc3cb4d57c\">\n",
+              "  <div id=\"df-b19756cb-45e3-4d82-bd6c-4a79cc64b379\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -617,7 +617,7 @@
               "</table>\n",
               "<p>5 rows × 32 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f3c7f65e-a47c-40b8-a039-93fc3cb4d57c')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b19756cb-45e3-4d82-bd6c-4a79cc64b379')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -668,12 +668,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-f3c7f65e-a47c-40b8-a039-93fc3cb4d57c button.colab-df-convert');\n",
+              "          document.querySelector('#df-b19756cb-45e3-4d82-bd6c-4a79cc64b379 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-f3c7f65e-a47c-40b8-a039-93fc3cb4d57c');\n",
+              "          const element = document.querySelector('#df-b19756cb-45e3-4d82-bd6c-4a79cc64b379');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -707,7 +707,7 @@
       ],
       "metadata": {
         "id": "d2Ti42na-cE8",
-        "outputId": "008f4f9d-67cf-4b10-cca0-d1a0402ba0bf",
+        "outputId": "8acc3a32-314d-45b2-e07e-82a44ceadcde",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -733,7 +733,7 @@
       ],
       "metadata": {
         "id": "owEaf98O-pMC",
-        "outputId": "e99f53ff-4c1c-4c36-9013-75b2d03b5048",
+        "outputId": "611bd4ca-0f8c-4e8d-8462-c5ef92c8dd84",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 364
@@ -817,7 +817,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b3aebf60-a985-4a92-8a77-5e8fc3d17300\">\n",
+              "  <div id=\"df-e75e1978-4daa-4e2c-a9d5-007f05a18c4f\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1047,7 +1047,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b3aebf60-a985-4a92-8a77-5e8fc3d17300')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e75e1978-4daa-4e2c-a9d5-007f05a18c4f')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1098,12 +1098,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-b3aebf60-a985-4a92-8a77-5e8fc3d17300 button.colab-df-convert');\n",
+              "          document.querySelector('#df-e75e1978-4daa-4e2c-a9d5-007f05a18c4f button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-b3aebf60-a985-4a92-8a77-5e8fc3d17300');\n",
+              "          const element = document.querySelector('#df-e75e1978-4daa-4e2c-a9d5-007f05a18c4f');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1137,7 +1137,7 @@
       ],
       "metadata": {
         "id": "SLkcCEpEJ30v",
-        "outputId": "4e3df868-ae5b-49d8-a2b4-cfd5d13ffb2f",
+        "outputId": "4775a9b8-3bd0-4c19-f770-d6aad97ff7c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1174,7 +1174,7 @@
       ],
       "metadata": {
         "id": "21jKDkUHJ8BL",
-        "outputId": "70608aec-b490-4252-db78-e049020a733d",
+        "outputId": "5bb9b9b6-ad63-474e-f83b-ed2d65c932b3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1308,7 +1308,7 @@
       ],
       "metadata": {
         "id": "3yXPwbQqJI0v",
-        "outputId": "b089a105-d35b-4cff-8c19-f1c2a4d70bf7",
+        "outputId": "ba05141a-307c-4ed3-fdc7-3ec71c5866e2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1334,7 +1334,7 @@
       ],
       "metadata": {
         "id": "im76MbuyJOXn",
-        "outputId": "3c6d8fde-c7b2-4083-c240-ee4f164de177",
+        "outputId": "9f909966-a216-4833-f504-5cca689ca311",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1360,7 +1360,7 @@
       ],
       "metadata": {
         "id": "m6fEcbZ4JRWx",
-        "outputId": "5aa44ac8-6ef5-4f53-c15c-1c1fa8edf46e",
+        "outputId": "134e40a8-1bab-43cb-badb-2d8b77541d91",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1405,7 +1405,7 @@
       ],
       "metadata": {
         "id": "GCp2EECBJVHT",
-        "outputId": "b4a16d55-f5c7-4bb8-aa46-420d6e4ebfee",
+        "outputId": "d7423cbf-8bd8-4be2-b08d-422dba3847d0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1442,7 +1442,7 @@
       ],
       "metadata": {
         "id": "GshzpX5sJcJM",
-        "outputId": "d1c7184d-5637-422e-f325-5adacd8e5316",
+        "outputId": "7ac59d5e-865c-458d-93cf-c845357d8e3c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1486,7 +1486,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1507,12 +1507,12 @@
       ],
       "metadata": {
         "id": "D-tkY5KdJrsp",
-        "outputId": "138f574f-d635-45da-f3b7-2bd0a90d138c",
+        "outputId": "ca880304-87ca-45b2-dffe-6f55a3dc269c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1554,9 +1554,72 @@
             ]
           },
           "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(new_df[new_df['adults']+new_df['babies']+new_df['children']==0])"
+      ],
+      "metadata": {
+        "id": "eHb0JZXEVvWU",
+        "outputId": "4c3dac0f-cb30-4e74-f1e7-6a7e9c9c7151",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "166"
+            ]
+          },
+          "metadata": {},
           "execution_count": 18
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_df.drop(len(new_df[new_df['adults']+new_df['babies']+new_df['children']==0])inplace=True)"
+      ],
+      "metadata": {
+        "id": "UH-R-iBVV0WG",
+        "outputId": "e7027626-00c7-46c0-ca8b-1dca5967c16a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 135
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-19-b99fc3ac6843>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    new_df.drop(len(new_df[new_df['adults']+new_df['babies']+new_df['children']==0])inplace=True)\u001b[0m\n\u001b[0m                                                                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_df['total_people']=new_df['adults']+new_df['babies']+new_df['children']\n",
+        "new_df['total_stay']=new_df['stays_in_week_nights']+new_df['stays_in_weekend_nights']"
+      ],
+      "metadata": {
+        "id": "4mZyqP_OV8I5"
+      },
+      "execution_count": 20,
+      "outputs": []
     }
   ],
   "metadata": {
