--- a/Hotel_Booking_Analysis_Capstone_Project.ipynb
+++ b/Hotel_Booking_Analysis_Capstone_Project.ipynb
@@ -11,8 +11,141 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Project Name - Hotel Booking Analysis**"
+      ],
+      "metadata": {
+        "id": "CB828pvjob4l"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Project Type - EDA**\n",
+        "\n",
+        "**Contribution - Team**\n",
+        "\n",
+        "**Team Member 1 -shadab husain**\n",
+        "\n",
+        "**Team Member 2 -istekhar ansari**"
+      ],
+      "metadata": {
+        "id": "ovklMUJ_oiFC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Project Summary -**"
+      ],
+      "metadata": {
+        "id": "wa-yKJVJo7S9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Problem Statement**"
+      ],
+      "metadata": {
+        "id": "6VPAjcmXpR6r"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**GitHub Link -**"
+      ],
+      "metadata": {
+        "id": "6b6ChImjo9Lh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Have you ever wondered when the best time of year to book a hotel room is? Or the optimal length of stay in order to get the best daily rate? What if you wanted to predict whether or not a hotel was likely to receive a disproportionately high number of special requests? This hotel booking dataset can help you explore those questions!\n",
+        "\n",
+        "This data set contains booking information for a city hotel and a resort hotel, and includes information such as when the booking was made, length of stay, the number of adults, children, and/or babies, and the number of available parking spaces, among other things. All personally identifying information has been removed from the data.\n",
+        "\n",
+        "Explore and analyze the data to discover important factors that govern the bookings."
+      ],
+      "metadata": {
+        "id": "V3JKonoBpJp8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**General Guidelines : -**"
+      ],
+      "metadata": {
+        "id": "qCI-0i1npNNc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1 - Well-structured, formatted, and commented code is required.\n",
+        "\n",
+        "2 - Exception Handling, Production Grade Code & Deployment Ready Code will be a plus. Those students will be awarded some additional credits.\n",
+        "\n",
+        "The additional credits will have advantages over other students during Star Student selection.\n",
+        "\n",
+        "    [ Note: - Deployment Ready Code is defined as, the whole .ipynb notebook should be executable in one go\n",
+        "              without a single error logged. ]\n",
+        "3 - Each and every logic should have proper comments.\n",
+        "\n",
+        "4 - You may add as many number of charts you want. Make Sure for each and every chart the following format should be answered.\n",
+        "\n",
+        "# Chart visualization code\n",
+        "Why did you pick the specific chart?\n",
+        "What is/are the insight(s) found from the chart?\n",
+        "Will the gained insights help creating a positive business impact? Are there any insights that lead to negative growth? Justify with specific reason.\n",
+        "\n",
+        "5 - You have to create at least 20 logical & meaningful charts having important insights.\n",
+        "[ Hints : - Do the Vizualization in a structured way while following \"UBM\" Rule.\n",
+        "\n",
+        "U - Univariate Analysis,\n",
+        "\n",
+        "B - Bivariate Analysis (Numerical - Categorical, Numerical - Numerical, Categorical - Categorical)\n",
+        "\n",
+        "M - Multivariate Analysis ]"
+      ],
+      "metadata": {
+        "id": "HruzcZdipCsM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Let's Begin !**"
+      ],
+      "metadata": {
+        "id": "vT-pD6ScqM1f"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**1. Know Your Data**"
+      ],
+      "metadata": {
+        "id": "O4UgfuZ4qQnO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Import Libraries**"
+      ],
+      "metadata": {
+        "id": "88dlpLlUqU2F"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "id": "dByMsuzT8Tnw"
       },
@@ -40,7 +173,7 @@
         },
         "outputId": "017e054f-a199-4532-fc21-ec711c7305de"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -61,7 +194,7 @@
       "metadata": {
         "id": "NX3SloHinK4e"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -87,7 +220,7 @@
           "height": 386
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -404,7 +537,7 @@
           "height": 386
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -736,7 +869,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -782,7 +915,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -849,7 +982,7 @@
       "metadata": {
         "id": "pCBehnKrixEL"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -874,7 +1007,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -899,7 +1032,7 @@
       "metadata": {
         "id": "B94dHh0ejC_G"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -915,7 +1048,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -951,7 +1084,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1008,7 +1141,7 @@
       "metadata": {
         "id": "HX6lqD1hjYor"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1020,7 +1153,7 @@
       "metadata": {
         "id": "HHWYK7DhjeV1"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1036,7 +1169,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1104,7 +1237,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1143,7 +1276,7 @@
           "height": 364
         }
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1636,7 +1769,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1663,7 +1796,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1690,7 +1823,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1736,7 +1869,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1772,7 +1905,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1795,7 +1928,7 @@
       "metadata": {
         "id": "UH-R-iBVV0WG"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1808,7 +1941,7 @@
       "metadata": {
         "id": "4mZyqP_OV8I5"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1870,7 +2003,7 @@
           "height": 355
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3058,7 +3191,7 @@
           "height": 112
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3218,7 +3351,7 @@
           "height": 373
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3268,7 +3401,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3322,7 +3455,7 @@
           "height": 461
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3372,7 +3505,7 @@
           "height": 206
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3548,7 +3681,7 @@
           "height": 373
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3610,7 +3743,7 @@
           "height": 363
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3817,7 +3950,7 @@
           "height": 355
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3866,7 +3999,7 @@
           "height": 112
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4025,7 +4158,7 @@
           "height": 410
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4075,7 +4208,7 @@
           "height": 488
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4321,7 +4454,7 @@
           "height": 410
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4371,7 +4504,7 @@
           "height": 423
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4590,7 +4723,7 @@
           "height": 301
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
