--- a/Hotel_Booking_Analysis_Capstone_Project.ipynb
+++ b/Hotel_Booking_Analysis_Capstone_Project.ipynb
@@ -145,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "dByMsuzT8Tnw"
       },
@@ -171,15 +171,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "017e054f-a199-4532-fc21-ec711c7305de"
+        "outputId": "6b300ce6-e14e-403b-8cec-17d41d59c92e"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive/; to attempt to forcibly remount, call drive.mount(\"/content/drive/\", force_remount=True).\n"
+            "Mounted at /content/drive/\n"
           ]
         }
       ]
@@ -194,7 +194,7 @@
       "metadata": {
         "id": "NX3SloHinK4e"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -214,13 +214,13 @@
       ],
       "metadata": {
         "id": "8vXo6BsS7hUH",
-        "outputId": "00001b3c-b458-4519-a166-e320d742fc82",
+        "outputId": "b4233462-6e18-421e-a4ed-e8004e70d60b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 386
         }
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -272,7 +272,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8e90fb3c-3f52-466a-a9b7-4269ca13fcae\">\n",
+              "  <div id=\"df-ec7d3c3e-6c66-48c2-b839-00c288a73bcf\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -440,7 +440,7 @@
               "</table>\n",
               "<p>5 rows × 32 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8e90fb3c-3f52-466a-a9b7-4269ca13fcae')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ec7d3c3e-6c66-48c2-b839-00c288a73bcf')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -491,12 +491,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-8e90fb3c-3f52-466a-a9b7-4269ca13fcae button.colab-df-convert');\n",
+              "          document.querySelector('#df-ec7d3c3e-6c66-48c2-b839-00c288a73bcf button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-8e90fb3c-3f52-466a-a9b7-4269ca13fcae');\n",
+              "          const element = document.querySelector('#df-ec7d3c3e-6c66-48c2-b839-00c288a73bcf');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -519,7 +519,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 41
+          "execution_count": 4
         }
       ]
     },
@@ -906,6 +906,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# basic information about the dataset\n",
         "df.info()"
       ],
       "metadata": {
@@ -4746,6 +4747,39 @@
       ],
       "metadata": {
         "id": "u2wbcx2-d6W6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**conclusion :**\n",
+        "\n",
+        "1) During Summer Season the hotels have get some no. of bookings than any other seasons. So, if You want to enjoy privacy You can book in remaining seasons.\n",
+        "\n",
+        "2) Majority of the Bookings happen through direct and online  as it is very easy and effective way.\n",
+        "\n",
+        "3) mostly 60% people prefer City hotel & 40% people prefer Resort hotel.\n",
+        "\n",
+        "4) Adr of Resort hotel is slightly lower than that of City hotel. Hence, City hotel seems\n",
+        "to be making slightly more revenue.\n",
+        "\n",
+        "5) Most of the booking is agent no.9 he is more than 25000 booked.\n",
+        "\n",
+        "6) According to the analysis 70.1%  is non cancel booking While  29.9% booking cancel in the Hotel.\n",
+        "\n",
+        "7) The parking space was not needed by 91.6% of the visitors while 8.3% of visitors only needed one parking space.\n",
+        "\n",
+        "8) Transient customer type is more which is 82.4 %. Percentage of Booking associated by the group is vey low.\n",
+        "\n",
+        "9) Repeated guests are very few which only 1.4 %. In order to retain the guests, management should take\n",
+        "feedbacks from guests and try to improve the services.\n",
+        "\n",
+        "10) In this bar chart July and August months had the most Bookings. Summer vocation can be the reason for the bookings.\n",
+        "\n",
+        "11) Most of the guest is  coming From Portugal and Great Britain Country. After Portugal and  GBR(Great Britain), France,Spain are the countries from where most of the  guests Came."
+      ],
+      "metadata": {
+        "id": "Up9KAPWEp3mq"
       }
     }
   ],
