generate github link

--- a/Hotel_Booking_Analysis_Capstone_Project.ipynb
+++ b/Hotel_Booking_Analysis_Capstone_Project.ipynb
@@ -55,7 +55,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**GitHub Link -**"
+        "**GitHub Link -** https://github.com/istekhar1543/hotel-booking-analysis"
       ],
       "metadata": {
         "id": "6b6ChImjo9Lh"
@@ -145,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "dByMsuzT8Tnw"
       },
@@ -173,7 +173,7 @@
         },
         "outputId": "6b300ce6-e14e-403b-8cec-17d41d59c92e"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,7 +194,7 @@
       "metadata": {
         "id": "NX3SloHinK4e"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -220,7 +220,7 @@
           "height": 386
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
